src/test/ui/lifetime-errors/ex1-return-one-existing-name-if-else.stderr
error[E0312]: lifetime of reference outlives lifetime of borrowed content...
  --> $DIR/ex1-return-one-existing-name-if-else.rs:12:27
   |
12 |     if x > y { x } else { y }
   |                           ^
   |
note: ...the reference is valid for the lifetime 'a as defined on the body at 11:43...
  --> $DIR/ex1-return-one-existing-name-if-else.rs:11:44
   |
11 |   fn foo<'a>(x: &'a i32, y: &i32) -> &'a i32 {
   |  ____________________________________________^ starting here...
12 | |     if x > y { x } else { y }
13 | | }
   | |_^ ...ending here
note: ...but the borrowed content is only valid for the anonymous lifetime #1 defined on the body at 11:43
  --> $DIR/ex1-return-one-existing-name-if-else.rs:11:44
   |
11 |   fn foo<'a>(x: &'a i32, y: &i32) -> &'a i32 {
   |  ____________________________________________^ starting here...
12 | |     if x > y { x } else { y }
13 | | }
   | |_^ ...ending here

error: aborting due to previous error

